<resources>
    <string name="app_name">ServShare</string>
    <string name="step_1_txt">You must have a valid network connection</string>
    <string name="step_1_desp">Ensure that this device and the remote are connected on the same network.</string>
    <string name="step_4_txt">You have to open the URL in your remote\'s browser</string>
    <string name="step_4_desp">0.0.0.0:53000</string>
    <string name="step_2_txt">Tap here to select the files you wish to share.</string>
    <string name="step_2_desp">Only the files which you have selected will be available for upload</string>
    <string name="step_5_txt">Download the files in your remote</string>
    <string name="step_5_desp">You\'re done! Your client\'s browser will download the selected files.</string>
    <string name="step_3_txt">Tap here or on the upload button (Up arrow - top right corner) to start the server</string>
    <string name="step_3_desp">The button must turn green indicating that the Server has turned on.</string>
    <string name="ctd_steps">Image file steps</string>
    <string name="selfil">S E L E C T    F I L E S</string>
    <string name="fs_but1">ADD FILES</string>
    <string name="fs_but2">REMOVE</string>
    <string name="nv_hme">Home</string>
    <string name="nv_set">Settings</string>
    <string name="nv_abt">About</string>
    <string name="nvhead1">Welcome</string>
    <string name="nvhead2">Unused Resource</string>
    <string name="setfil">S E T T I N G S</string>
    <string name="chp">Change Send Port</string>
    <string name="edtnme">Port number</string>
    <string name="edtnmeh">IPv4 Port</string>
    <string name="pchwr">WARNING: You are attempting to change the default HTTP port. Please ensure that the port is not blocked, reserved or is in use by other application. Non compliance may lead to problems with your network configuration.</string>
    <string name="abtus">A B O U T</string>
    <string name="abtus_ver">Version:</string>
    <string name="abtus_vrn">0.2.0</string>
    <string name="abtus_cpr">Copyright \u00A9 reserved. No part of this software and all resources associated with the brand \'ServShare\' and \'ContrifyShare\' shall be used without prior permission. Distribution of software is free and all usage including commercial usage of this application is allowed as long as all usage are in purview of the copyright policy. </string>
    <string name="abtus_cpr_ap">Implementation of Apache FTPServer is licensed by Apache License 2.0. Read about it at https://www.apache.org/licenses/LICENSE-2.0 </string>
    <string name="abtus_cpr2">This software has been tested in multiple testing conditions and various instances have been simulated to study the response and impact. The response and the impact of these studies were deemed to be satisfactory. </string>
    <string name="abtus_cp3">NETWORK INTERFERENCE: This software accepts connection on Port 53000 (Default) on the TCP/IP. This is an unreserved port so please ensure that this port isn\'t blocked or in use by other application or server. If it doesn\'t help, consider changing the port in the Settings.</string>
    <string name="abtus_git">This project is available on GitHub</string>
    <string name="abtus_b1">START SERVER</string>
    <string name="git_msft">GitHub is a registered trademark of Microsoft Corporation. \u00A9 Microsoft Corporation. All rights reserved.</string>
    <string name="empt_lv">Add files in the list to share</string>
    <string name="empt_lv1">It is lonely in here!</string>
    <string name="svst_wr">SEND UNKNOWN</string>
    <string name="svst_wr1">SEND ON</string>
    <string name="svst_wr2">SEND OFF</string>
    <string name="svst_wru">RECEIVE UNKNOWN</string>
    <string name="svst_wr1u">RECEIVE ON</string>
    <string name="svst_wr2u">RECEIVE OFF</string>
    <string name="set_b1">MODIFY</string>
    <string name="frun_h1">F I R S T  R U N</string>
    <string name="frun_h2">Welcome to ServShare. This application needs to extract some additional files into your external storage. Please accept the prompt to allow storage rights to the application. Tap on EXTRACT FILES to continue.</string>
    <string name="frun_h3">If you have reset the application then the steps are also same.</string>
    <string name="frun_b1">EXTRACT</string>
    <string name="set_h1">RESET APPLICATION</string>
    <string name="set_ex1">MODIFY STORAGE</string>
    <string name="set_h2">This operation will reset the application to its original state. Any user information will be preserved.</string>
    <string name="set_bt1">RESET</string>
    <string name="abt_h1">To contact support email: contrifysoftware@gmail.com</string>
    <string name="str_h1">Select your option</string>
    <string name="upmod_h1">R E C E I V E F I L E S</string>
    <string name="upmod_desp">To receive the files from client to this host device, send files using FTP via any client. Use this configuration</string>
    <string name="upmod_uname">User Name: NOT AVAILABLE</string>
    <string name="upmod_pass">Password: NOT AVAILABLE</string>
    <string name="upmod_ipa">IP+PORT: NOT AVAILABLE</string>
    <string name="upmod_files">YOUR FILES ARE STORED AT \"servshare_files\" directory in your selected location (in Settings).</string>
    <string name="upmod_info">INFORMATION: To change the user name or password, head to settings. Transmission of data is done without TLS.</string>
    <string name="upmod_b1">START/STOP SERVER</string>
    <string name="nv_upl">Send Files</string>
    <string name="nv_dwn">Receive Files</string>
    <string name="set_h3">Change FTP Username/Password</string>
    <string name="set_ed_1">New Username</string>
    <string name="set_ed_2">New Password</string>
    <string name="set_hnt">Changing the username, password and port information is persistent.</string>
    <string name="java_upmod_tx1">Stop Server</string>
    <string name="java_upmod_tx2">Start Server</string>
    <string name="set_rb_1">Default Path</string>
    <string name="set_rb_2">User defined path</string>
    <string name="set_stset">Unable to find storage path. Restart application.</string>
    <string name="menu_h1">SEND</string>
    <string name="menu_h2">RECEIVE</string>
    <string name="clid">ca-app-pub-1916718358186920~4725242401</string>
    <string name="adbannerid">ca-app-pub-1916718358186920/2099079061</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
