<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF6F3"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <TextView
            android:id="@+id/textView1"
            android:layout_width="250sp"
            android:layout_height="28dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/calibri"
            android:text="@string/selfil"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addfile"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="12dp"
            android:textSize="14sp"
            android:text="@string/fs_but1"
            android:textColor="@android:color/white"
            android:background="@drawable/buttons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/rmfile"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/buttons"
            android:text="@string/fs_but2"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/addfile" />

        <Button
            android:id="@+id/startser"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:minWidth="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/buttons"
            android:text="@string/abtus_b1"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/rmfile" />

        <ListView
            android:id="@+id/filelst"
            android:layout_width="330dp"
            android:layout_height="352dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <TextView
            android:id="@+id/elv2"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:textColor="@android:color/holo_purple"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            android:text="@string/empt_lv1"
            android:visibility="gone" />

        <TextView
            android:id="@+id/elv"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/elv2"
            android:text="@string/empt_lv"
            android:visibility="gone" />



</androidx.constraintlayout.widget.ConstraintLayout>